--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -7,6 +7,7 @@
         <th>Title</th>
         <th>Text</th>
         <th>Keywords</th>
+        <th colspan="2"></th>
     </tr>
 
     <% @places.each do |place| %>
@@ -14,7 +15,8 @@
             <td><%= place.title %></td>
             <td><%= place.coordinates %></td>
             <td><%= place.keywords %></td>
-            <td><%= link_to 'Show', places_path(place) %></td>
+            <td><%= link_to 'Show', place_path(place) %></td>
+            <td><%= link_to 'Edit', edit_place_path(place) %></td>
         </tr>
     <% end %>
 </table>
